--- a/Artificial Neural Network/Shallow Neural Network/Shallow_Neural_Network.ipynb
+++ b/Artificial Neural Network/Shallow Neural Network/Shallow_Neural_Network.ipynb
@@ -5,8 +5,7 @@
     "colab": {
       "name": "Shallow Neural Network",
       "provenance": [],
-      "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMjrIrHJiXbeVY7fLAMiomv"
+      "collapsed_sections": []
     },
     "kernelspec": {
       "name": "python3",
